--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -1,13 +1,26 @@
+#start production flask app automatically
+
 [Unit]
-Description=Gunicorn application server running AirBnB_clone_v4
-Author=Olayeye Muideen
+Description=Gunicorn instance to serve AirBnB_clone_v2
+After=network.target
 
 [Service]
-ExecStart=/home/ubuntu/.local/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app
-Restart=always
-User=ubuntu
-Group=www-data
+User=root
+Group=root
 WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
+Environment="PATH=/home/ubuntu/.local/bin"
+Environment="PYTHONPATH=/usr/lib/python38.zip:/usr/lib/python3.8:/usr/lib/python3.8/lib-dynload:/home/ubuntu/.local/lib/python3.8/site-packages:/usr/local/lib/python3.8/dist-packages:/usr/lib/python3/dist-packages:/home/ubuntu/.local/bin"
+Environment="HBNB_MYSQL_USER=hbnb_dev"
+Environment="HBNB_MYSQL_PWD=hbnb_dev_pwd"
+Environment="HBNB_MYSQL_HOST=localhost"
+Environment="HBNB_MYSQL_DB=hbnb_dev_db"
+Environment="HBNB_TYPE_STORAGE=db"
+Environment="HBNB_API_HOST=0.0.0.0"
+Environment="HBNB_API_PORT=5000"
+
+ExecStart=/home/ubuntu/.local/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app
+StandardError=file:/tmp/airbnb-error.log
+StandardOutput=file:/tmp/airbnb-access.log
 
 [Install]
 WantedBy=multi-user.target
